# agentic-rag-gdpr-noyb

./: .env.example  01_get_knowledge.py  03_smolagent_rag.py  04_fetch_new_data.py  DYN_weekly_case_export.py  DYN_weekly_vector_ingestion.py  README.md  local_ingestion.py  pyproject.toml  r1_smolagent_rag.py  weekly_case_export.py
.github/workflows/: weekly_export.yml
chroma_db/5ac13c2c-9d8f-448b-9542-52023ce3d8e3/: index_metadata.pickle
data/: extracted_weekly.json  gdpr_articles.json
